# LocalRAG

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.openwebui  Dockerfile.openwebui.cu128  Makefile  RAG.md  README.md  Ragupdate.md  pyproject.toml  recommendation.md
.github/workflows/: ci.yml
branding/: README.md
compose/: .env.example  Dockerfile.celery  Dockerfile.vllm-chat  docker-compose.observability.yml  docker-compose.yml  requirements-celery.txt
compose/archive/: docker-compose.yml.pre-gemma4
compose/caddy/: Caddyfile
compose/secrets/: README.md
compose/vllm-qu/: README.md
docs/: ingestion.md  rag-blob-gc.md  rag-chat-consolidation.md  rag-context-expand.md  rag-contextual-retrieval.md  rag-e2e-testing-guide.md  rag-faithfulness.md  rag-hnsw-tuning.md  rag-hybrid.md  rag-hyde.md  rag-metrics.md  rag-mmr.md  rag-model-swap.md  rag-per-kb-chunking-design.md  rag-per-kb-config.md  rag-phase0-1a-4-execution-plan.md  rag-phase0-1a-4-rollback.md  rag-quantization.md  rag-raptor.md  rag-rerank.md  rag-semcache.md  rag-upgrade-disaster-recovery.md  rag-upgrade-execution-plan.md  retrieval.md  runbook.md
docs/runbook/: README.md  backup-restore.md  cold-start.md  e2e-test-report-2026-04-27.md  flag-reference.md  ocr-runbook.md  plan-b-flag-reference.md  preexisting-test-triage.md  qu-llm-runbook.md  reingest-checklist.md  reingest-procedure.md  slo.md  temporal-reshard-checklist.md  temporal-reshard-procedure.md  tiered-storage-runbook.md  troubleshooting.md
ext/: _lazy_user_lookup.py  app.py  config.py
ext/db/: qdrant_schema.py  session.py
ext/routers/: ingest_stream.py  kb_admin.py  kb_retrieval.py  rag.py  rag_stream.py  upload.py
ext/services/: auth.py  blob_gc.py  blob_store.py  budget.py  chat_model_preflight.py  chat_rag_bridge.py  chunker.py  chunker_structured.py  circuit_breaker.py  citation_checker.py  context_expand.py  contextualizer.py  cross_encoder_reranker.py  doc_summarizer.py  embed_cache.py  embed_preflight.py  embedder.py  entity_extractor.py  extractor.py  flags.py  hyde.py  ingest.py  ingest_progress.py  jwt_verifier.py  kb_config.py  kb_service.py  llm_telemetry.py  logging_setup.py  metrics.py  mmr.py  multi_query.py  obs.py  ocr.py  ood_signal.py  pipeline_version.py  qu_cache.py  query_intent.py  query_rewriter.py  query_understanding.py  raptor.py  (+15 more)
ext/static/: kb-admin.html
ext/workers/: blob_gc_task.py  celery_app.py  ingest_worker.py  scheduled_eval.py  snapshot_task.py
k8s/: README.md
k8s.future/: values.yaml
model_manager/: Dockerfile  app.py  client.py  config.py  requirements.txt  sleeper.py  tracker.py
observability/: .env.example  README.md  docker-compose.yml
observability/alertmanager/: alertmanager.yml
observability/loki/: loki-config.yml
observability/otel/: otel-collector.yml
observability/prometheus/: alerts-celery.yml  alerts-gpu.yml  alerts-qu.yml  alerts-rag-quality.yml  alerts-retrieval.yml  alerts-tiered-shards.yml  prometheus.yml
observability/promtail/: promtail-config.yml
patches/: 0001-mount-ext-routers.patch  0002-kb-selector-frontend.patch  0003-navbar-kb-picker-rewire.patch  0004-admin-kb-nav-link.patch  0006_filename_escape.patch  0007_chat_completion_telemetry.patch
patches/vllm/: gemma4_mm.py
scripts/: add_sparse_to_collection.py  analyze_shadow_log.py  apply_analyst_config.py  apply_migrations.py  apply_patches.sh  apply_tenant_indexes.py  backfill_doc_summaries.py  backup.sh  backup_postgres.sh  backup_qdrant.sh  blob_gc.py  bootstrap.sh  build_temporal_tree.py  celery_soak_test.py  daily_eval_cron.sh  delete_orphan_chunks.py  edit_kb_synonyms.py  enable_quantization.py  gen_self_signed_cert.sh  kb_cleanup_phase5_rollback.sh  kb_cleanup_post_plan_a.sh  migrate_chat_collections.py  normalize_doc_ids.py  preflight_models.py  rag_template_military.txt  rebase_upstream.sh  rebuild_kb_1.py  reconcile_qdrant_schema.py  recontextualize_kb.py  reembed_all.py  reindex_hybrid.py  reingest_all.py  reingest_for_ocr.py  reingest_kb.py  reingest_kb_dual.py  reshard_kb_temporal.py  restore.sh  restore_drill.sh  seed_admin.py  seed_eval_corpus.py  (+5 more)
tests/: README.md  conftest.py
tests/e2e/: build_report.py  run_e2e.py  run_e2e_resume.py
tests/eval/: README.md  chunk_size_histogram.py  compare_baselines.py  faithfulness.py  gate.py  generate_golden.py  golden_daily_subset.jsonl  golden_evolution.jsonl  golden_human.jsonl  golden_kb2_intent_mix.jsonl  golden_starter.jsonl  harness.py  query_mix_classifier.py  run_all.py  run_eval.py  run_eval_kb_eval.py  run_faithfulness_eval.py  scorer.py  seed_test_kb.py  stratify.py
tests/integration/: conftest.py  test_app_wiring.py  test_apply_migrations.py  test_celery_soak.py  test_colbert_upsert.py  test_compose_up.py  test_concurrent_users.py  test_daily_monitor.py  test_edit_kb_synonyms_cli.py  test_embedder.py  test_ingest.py  test_ingest_worker_status.py  test_kb_admin_routes.py  test_kb_admin_synonyms_endpoint.py  test_kb_isolation.py  test_kb_migration.py  test_kb_orm_fields.py  test_kb_retrieval_routes.py  test_kb_service.py  test_migration_003.py  test_migration_017_kb_synonyms.py  test_mm_app.py  test_multi_entity_decompose.py  test_patch_applies.py  test_qdrant_preflight.py  test_rag_end_to_end.py  test_rag_isolation.py  test_rag_relevance.py  test_rag_routes.py  test_rbac_cache_invalidation.py  test_rbac_cache_subscribe.py  test_rbac_routes.py  test_rbac_service.py  test_retriever.py  test_seed_admin.py  test_spotlight_e2e.py  test_temporal_resharding.py  test_upload_routes.py  test_upload_safety.py  test_vector_store.py  (+1 more)
tests/unit/: conftest.py  test_apply_tenant_indexes_script.py  test_auth_dep.py  test_auth_modes.py  test_blob_gc.py  test_blob_store.py  test_bootstrap.py  test_bridge_entity_quota.py  test_bridge_metadata_intent_regression.py  test_bridge_qu_wiring.py  test_budget.py  test_budget_includes_prompt.py  test_budget_tokenizer.py  test_budget_tokenizer_model_override.py  test_budget_tokenizer_registry.py  test_cert_gen.py  (+197 more)
whisper_service/: Dockerfile  app.py  requirements.txt
(+104 files in other folders)
