[project]
name = "org-chat-assistant"
version = "0.1.0"
description = "Hybrid thin-fork of Open WebUI with KB-based RAG pipeline"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "argon2-cffi>=23.1",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "redis>=5.0",
  "qdrant-client>=1.9",
  "python-multipart>=0.0.9",
  "huggingface_hub>=0.24",
  "pypdf>=4.3",
  "tiktoken>=0.7",
  "pyjwt>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "testcontainers[postgres,redis]>=4.0",
  "docker>=7.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "aiosqlite>=0.19",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "celery[redis]>=5.3",
]
# Hybrid-retrieval extra. Install only if you plan to run with RAG_HYBRID=1
# (sparse BM25 + dense fusion via Qdrant's server-side RRF). The fastembed
# dependency pulls in onnxruntime + pillow (~150 MB total on first install).
# The Qdrant/bm25 model itself is ~10 MB (stopwords + stemmer).
hybrid = [
  "fastembed>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
markers = [
  "security: upload safety / XSS / CSRF / MIME checks",
  "concurrency: multi-user parallel operations",
  "perf: performance benchmarks (non-gating)",
  "integration: requires docker compose stack (opt-in via --integration or pytest tests/integration/)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["upstream/", ".venv/", "volumes/"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["upstream/", ".venv/", "volumes/"]
