[project]
name = "org-chat-assistant"
version = "0.1.0"
description = "Hybrid thin-fork of Open WebUI with KB-based RAG pipeline"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "argon2-cffi>=23.1",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "redis>=5.0",
  "qdrant-client>=1.9",
  "python-multipart>=0.0.9",
  "huggingface_hub>=0.24",
  "pypdf>=4.3",
  "tiktoken>=0.7",
  "pyjwt>=2.8,<3",
  "prometheus-client>=0.20",
  # P3.4 RAPTOR uses GaussianMixture clustering over chunk embeddings.
  # Only loaded when RAG_RAPTOR=1; flag-off ingest path does not import it.
  "scikit-learn>=1.3",
  # P1.1 hybrid BM25 — RAG_HYBRID default is ON since the eval flip
  # (+12pp chunk_recall, +10pp MRR). fastembed is now a hard runtime dep
  # rather than the [hybrid] extra. Cost: ~150 MB onnxruntime + pillow,
  # plus a ~10 MB Qdrant/bm25 model downloaded on first call.
  "fastembed>=0.4",
  # Phase 1.4 — exponential-backoff retry on transient TEI / HyDE /
  # contextualizer HTTP failures. Hard runtime dep because retry_policy.py
  # imports tenacity at module load (used by ext.services.embedder etc).
  "tenacity>=8.2",
  # Phase 1.3 — per-KB circuit breaker. Currently the implementation in
  # ext/services/circuit_breaker.py is local (no pybreaker dep), but pinning
  # for future expansion if we move to the library.
  "pybreaker>=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "testcontainers[postgres,redis]>=4.0",
  "docker>=7.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "aiosqlite>=0.19",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "celery[redis]>=5.3",
  # Used by tests/unit/test_rerank_cache.py to exercise the Redis-backed
  # score cache without a live Redis. Tests skip cleanly if absent.
  "fakeredis>=2.20",
]
# Hybrid-retrieval extra. Install only if you plan to run with RAG_HYBRID=1
# (sparse BM25 + dense fusion via Qdrant's server-side RRF). The fastembed
# dependency pulls in onnxruntime + pillow (~150 MB total on first install).
# The Qdrant/bm25 model itself is ~10 MB (stopwords + stemmer).
hybrid = [
  "fastembed>=0.4",
]
# Cross-encoder rerank extra. Install only if you plan to run with RAG_RERANK=1.
# Pulls in sentence-transformers + torch (~1 GB+ on first install). The model
# itself (BAAI/bge-reranker-v2-m3) is ~560 MB and downloads on first call.
# Flag-gated: unset or RAG_RERANK=0 keeps the legacy per-KB normalizer path.
rerank = [
  "sentence-transformers>=3.0",
]
# OpenTelemetry observability extra. Install when running with OBS_ENABLED=true
# so traces/logs/metrics ship via OTLP to the collector. Absence of these
# packages is fully handled by ext/services/obs.py (fail-open no-op).
observability = [
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
  "opentelemetry-instrumentation-redis>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "opentelemetry-instrumentation-requests>=0.48b0",
  "opentelemetry-instrumentation-psycopg2>=0.48b0",
  "opentelemetry-instrumentation-celery>=0.48b0",
  "opentelemetry-instrumentation-logging>=0.48b0",
  "python-json-logger>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
markers = [
  "security: upload safety / XSS / CSRF / MIME checks",
  "concurrency: multi-user parallel operations",
  "perf: performance benchmarks (non-gating)",
  "integration: requires docker compose stack (opt-in via --integration or pytest tests/integration/)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["upstream/", ".venv/", "volumes/"]

[tool.mypy]
python_version = "3.10"
# Wave 2 (review §9.6): flipped from True → False so that genuinely
# missing imports in OUR code are caught. Per-module overrides below
# preserve the previous behaviour for known-3rd-party libraries that
# don't ship type stubs (qdrant-client, fastembed, tiktoken, prometheus
# client variants, OTel SDK shims). Add new entries below as needed.
ignore_missing_imports = false
exclude = ["upstream/", ".venv/", "volumes/"]

[[tool.mypy.overrides]]
module = [
  "qdrant_client.*",
  "fastembed.*",
  "tiktoken",
  "tiktoken_ext.*",
  "pymupdf.*",
  "fitz",
  "pypdf",
  "pdfplumber.*",
  "pytesseract",
  "transformers.*",
  "sentence_transformers.*",
  "tenacity.*",
  "celery.*",
  "asyncpg.*",
]
ignore_missing_imports = true
